# trio

./: .gitignore  CHANGES  FILES  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  compare.c  configure.ac  configure.in  example.c  libtrio.pc.in  maketgz  regression.c  strio.c  strio.h  test-build.sh  trio.c  trio.h  trioc.c  triocstr.c  triodef.h  trionan.c  trionan.h  triop.h  triostr.c  triostr.h
doc/: .gitignore  Doxyfile  Doxyfile.in  Makefile.am  doc.h  doc_dynamic.h  doc_nan.h  doc_printf.h  doc_register.h  doc_scanf.h  doc_static.h  footer.html  header.html  trio.cfg
man/man3/: strio.3  trio_printf.3  trio_register.3  trio_scanf.3
tex/: strio.tex  trio_printf.tex  trio_register.tex  trio_scanf.tex
